# HistomicsDetect

./: .gitignore  README.rst  accuracy_lnms.py  cluster_test.py  pyproject.toml  setup.py  test.py
.github/workflows/: build-test-package.yml
example/: LearningNMSDemo.ipynb  example.ipynb  lnms_configs.yml  training_and_inference.ipynb  whole_slide_inference.ipynb  wsi_example.ipynb
histomics_detect/: __init__.py
histomics_detect/anchors/: __init__.py  create.py  filter.py  sampling.py
histomics_detect/augmentation/: __init__.py  augmentation.py
histomics_detect/boxes/: __init__.py  cross_boxes.py  match.py  neighborhood.py  parameterize.py  transforms.py
histomics_detect/io/: __init__.py  input.py
histomics_detect/metrics/: __init__.py  average_precision.py  iou.py  lmns.py  lnms.py  objectness.py  pr.py
histomics_detect/models/: __init__.py  block_model.py  compression_network.py  experiment_utils.py  faster_rcnn.py  lnms_loss.py  lnms_model.py  model_utils.py
histomics_detect/networks/: __init__.py  backbones.py  fast_rcnn.py  field_size.py  lnms_cnn.py  neighborhood_free_lnms.py  rpns.py  transfer_layers.py
histomics_detect/roialign/: __init__.py  roialign.py
histomics_detect/visualization/: __init__.py  lnms_visualization.py  visualization.py
roialign/: roialign.py
test/: test_load_histomics_detect.py
